# TaylorFlow

./: .gitignore  CMakeLists.txt  README.org  build_and_run
.github/workflows/: ci.yml  cmake-multi-platform.yml  run-cmake-tests.yml
docs/: log.org
src/: Interval.cpp  Interval.hpp  Polynomial.cpp  Polynomial.hpp  TaylorModel.cpp  TaylorModel.hpp  Types.h  main.cpp  utility.cpp  utility.hpp
tests/: helloworld.cpp  interval.cpp  picard_iteration.cpp  polynomial.cpp
